--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,14 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  json_serializable: ^6.6.1
+  json_annotation: ^4.8.0
+  http: ^0.13.5
+  dio: ^4.0.4
+  retrofit: ^3.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  provider: ^6.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -38,8 +46,11 @@ dependencies:
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^4.1.2
+  hive_generator: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
