--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   carousel_slider: ^4.2.1
+  flutter_rating_bar: ^4.0.1
   flutter:
     sdk: flutter
   json_serializable: ^6.6.1
