--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   provider: ^6.0.5
+  uuid: ^3.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
