--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   hive_flutter: ^1.1.0
   provider: ^6.0.5
   uuid: ^3.0.7
+  cached_network_image: ^3.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
