--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,10 @@ dev_dependencies:
     sdk: flutter
   retrofit_generator: ^4.1.2
   hive_generator: ^2.0.0
+  integration_test:
+    sdk: flutter
+  flutter_driver:
+    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
